--- a/package.json
+++ b/package.json
@@ -1,24 +1,1 @@
-{
-  "name": "playwright_bdd",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "npx cucumber-js --require features/step_definitions/**/*.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
-  "devDependencies": {
-    "@cucumber/cucumber": "^12.2.0",
-    "@playwright/test": "^1.57.0",
-    "@types/node": "^24.7.1",
-    "allure-playwright": "^3.4.3",
-    "playwright-bdd": "^8.4.1"
-  },
-  "dependencies": {
-    "@faker-js/faker": "^10.1.0",
-    "luxon": "^3.7.2"
-  }
-}
+{ "name": "playwright_bdd", "version": "1.0.0", "description": "", "main": "index.js", "scripts": { "test": "npx cucumber-js --require features/step_definitions/**/*.js" }, "keywords": [], "author": "", "license": "ISC", "type": "commonjs", "devDependencies": { "@playwright/test": "^1.57.0", "@types/node": "^24.7.1", "allure-playwright": "^3.4.3" }, "dependencies": { "@faker-js/faker": "^10.1.0", "luxon": "^3.7.2" } }
